feat: Created an API to Create Booking page
